--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
 <body>
     <div class="top-container">
-    <img class="top-cloud" src="cloud.png" alt="cloud">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
     <h1>I'm Bhavya</h1>
-    <p>an Engineering student</p>
-    <img class="bottom-cloud" src="cloud.png" alt="cloud" >
-    <img src="mountain.png" alt="mountain">
+    <p><b>an Engineering student</b> <br>at</br> <p1></p1><b>Panipat Institute of Engineering & Technology.</b></p1></p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud" >
+    <img src="images/mountain.png" alt="mountain">
     <hr>
 </div>
 
 <div class="middle-container">
-    <img class="profile" src="my profile.jpg " alt="me" >
+    <img class="profile" src="images/profile.jpeg " alt="me" >
     <h2>Hello.</h2>
-    <p class="intro">I am a Computer Science student. I'm quite interested in Web Designing. I <img class="red" src="red heart.png" alt="heart"
+    <p class="intro">I am a Computer Science student. I'm quite interested in Web Designing. I <img class="red" src="images/red heart.png" alt="heart"
     width="15px" height="15px"> sketching and craft-work. </p> 
     <hr>
 </div>
@@ -33,7 +33,7 @@
     <h2>About Me.</h2>
     <div class="inner-container">
         <div class="image-section">
-            <img class="skills" src="skills1.webp" alt="skills">
+            <img class="skills" src="images/skills1.webp" alt="skills">
         </div>
         <div class="skill-section">
             <h3>My Skills</h3>
@@ -48,12 +48,12 @@
 <div class="bottom-container2" style="margin-top:3%">
     <div class="inner-container">
         <div class="image-section">
-            <img class="me1" src="mmee.png" alt="me">
+            <img class="me1" src="images/mmee.png" alt="me">
         </div>
         <div class="skill-section">
             <h3>What i want to do is</h3>
         <p class="discription">Currently, I'm in 1st year and want to learn so many things in these 4 years of my Engineering life. 
-            Also want to explore myself in every field. I just love to sketch in my leisure time. 
+            Also want to explore myself in every field. and wanna be a full-skilled software developer. I just love to sketch in my leisure time. 
           </p>
         </div>
         
@@ -74,11 +74,11 @@
     <h2>Get in Touch</h2>
     <h3>If you love sketching as much as i do? Let's talk about your creativity level!</h3>
     <div class="contact-me" style="margin: 3%;">
-        <button class="btn" href="mailto:bhavyataneja987@gmail.com">CONTACT ME</button>
+        <a class="btn" href="mailto:bhavyataneja987@gmail.com">CONTACT ME</a>
     </div>
 </div>
 <footer>
-   &copy HAVE A GOOD YEAR,2021
+   &copy HAVE A GOOD YEAR,2022
 </footer>
 
 </body>
